--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -24,6 +24,6 @@ jobs:
       env:
         GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
       run: |
-        gcloud auth configure-docker us-central1-docker.pkg.dev
+        gcloud auth configure-docker europe-west9-docker.pkg.dev
         docker build -t europe-west9-docker.pkg.dev/$GOOGLE_PROJECT/test1/test1:test_ml_image .
         docker push europe-west9-docker.pkg.dev/$GOOGLE_PROJECT/test1/test1:test_ml_image
